--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,4 @@
 appURL = https://bluechipservicesinternational.org/BLUECHIP/
 email =  Testing@gmail.com
 password = Test@123
+FilePathToUpload= "C:\\Users\\MS\\Downloads\\fileupload.exe.exe"
