--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,3 +2,6 @@ appURL = https://bluechipservicesinternational.org/BLUECHIP/
 email =  Testing@gmail.com
 password = Test@123
 FilePathToUpload= "C:\\Users\\MS\\Downloads\\fileupload.exe.exe"
+name = purnima
+phonenum = 9876543210
+message = Automating Bluechip Application
